--- a/manifests/sentry-secrets.yaml
+++ b/manifests/sentry-secrets.yaml
@@ -1,18 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: sentry-sentry
+  name: sentry
   labels:
-    app: sentry-sentry
-    chart: "sentry-2.0.1"
-    release: "release-name"
-    heritage: "Tiller"
+    app: sentry
 type: Opaque
 data:
-
   sentry-secret: "NmhEcU9hZFh2SklsZE00MVo4SFZmSEVhOEJ6OElxQXFYTVVzdXBzYQ=="
-
   smtp-password: ""
-
-
   user-password: "OTdXZ2N6ejluYVYxTFY4Ng=="
