--- a/manifests/sentry-secrets.yaml
+++ b/manifests/sentry-secrets.yaml
@@ -6,6 +6,6 @@ metadata:
     app: sentry
 type: Opaque
 data:
-  sentry-secret: "NmhEcU9hZFh2SklsZE00MVo4SFZmSEVhOEJ6OElxQXFYTVVzdXBzYQ=="
-  smtp-password: ""
-  user-password: "OTdXZ2N6ejluYVYxTFY4Ng=="
+  sentry-secret: '{{repl ConfigOption "secret_key" | Base64Encode}}'
+  smtp-password: '{{repl ConfigOption "smtp_password" | Base64Encode}}'
+  user-password: '{{repl ConfigOption "admin_password" | Base64Encode}}'
