--- a/manifests/web-deployment.yaml
+++ b/manifests/web-deployment.yaml
@@ -48,11 +48,11 @@ spec:
         - name: SENTRY_REDIS_PORT
           value: "6379"
         - name: SENTRY_EMAIL_HOST
-          value: "smtp"
+          value: '{{repl ConfigOption "smtp_host"}}'
         - name: SENTRY_EMAIL_PORT
-          value: "25"
+          value: '{{repl ConfigOption "smtp_port"}}'
         - name: SENTRY_EMAIL_USER
-          value: ""
+          value: '{{repl ConfigOption "smtp_user"}}'
         - name: SENTRY_EMAIL_PASSWORD
           valueFrom:
             secretKeyRef:
