--- a/manifests/replicated-app.yaml
+++ b/manifests/replicated-app.yaml
@@ -5,6 +5,9 @@ metadata:
 spec:
   title: Sentry Enterprise
   icon: https://sentry-brand.storage.googleapis.com/sentry-glyph-black.png
+  releaseNotes:
+    # Sentry
+    Release Notes here
   ports:
     - serviceName: "sentry"
       servicePort: 9000
