update deployment selectors to match app label

--- a/manifests/cron-deployment.yaml
+++ b/manifests/cron-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: sentry-cron
+      app: sentry
   replicas: 1
   template:
     metadata:
