--- a/manifests/worker-deployment.yaml
+++ b/manifests/worker-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: sentry-worker
+      app: sentry
   replicas: 2
   template:
     metadata:
