--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -24,5 +24,5 @@ spec:
         type: "image/png"
     type: "sentry"
     links:
-      - description: Dashboard
+      - description: Open Sentry Enterprise
         url: "http://sentry"
