--- a/manifests/analyzers.yaml
+++ b/manifests/analyzers.yaml
@@ -1,9 +1,31 @@
 apiVersion: troubleshoot.replicated.com/v1beta1
-kind: Preflight
+kind: Analyzer
 metadata:
   name: sentry-enterprise
 spec:
+  collectors:
+    - secret:
+        name: sentry-postgresql
+        key: postgres-password
+        includeValue: false
   analyzers:
+    # Fails on preflight page even though registry has been added vendor.replicated.com.
+    - imagePullSecret:
+        checkName: Has Access to index.docker.io
+        registryName: index.docker.io
+        outcomes:
+          - fail:
+              message: Cannot pull from index.docker.io
+          - pass:
+              message: Found credentials to pull from index.docker.io
+    # Fails on preflight page even though Ingress exists.
+    - ingress:
+        ingressName: sentry-ingress
+        outcomes:
+          - fail:
+              message: Sentry ingress is not working.
+          - pass:
+              message: Sentry ingress is working.
     - deploymentStatus:
         name: sentry-worker
         outcomes:
@@ -15,6 +37,19 @@ spec:
               message: The Sentry Worker deployment has only a single ready replica.
           - pass:
               message: There are multiple replicas of the Sentry Worker deployment ready.
+    # Is it statefulset or statefulsetStatus?
+    # Does not even show up in preflights page.
+    - statefulsetStatus:
+        name: sentry-redis-master
+        outcomes:
+          - fail:
+              when: "< 1"
+              message: The API deployment does not have any ready replicas.
+          - warn:
+              when: "= 1"
+              message: The API deployment has only a single ready replica.
+          - pass:
+              message: There are multiple replicas of the API deployment ready.
     - clusterVersion:
         outcomes:
           - fail:
@@ -35,6 +70,16 @@ spec:
               message: IngressRoutes CRD not found!
           - pass:
               message: IngressRoutes CRD found!
+    # Does not even show up in preflights page.
+    - secret:
+        checkName: Sentry Postgresql
+        secretName: sentry-postgresql
+        key: postgres-password
+        outcomes:
+          - fail:
+              message: The `sentry-postgresql` secret was not found or the `postgres-password` key was not detected.
+          - pass:
+              message: The Postgres Password was found in a secret in the cluster.
     - containerRuntime:
         outcomes:
           - pass:
@@ -70,7 +115,6 @@ spec:
           - pass:
               when: "== aks"
               message: AKS is a supported distribution
-          # Will be supported in the future
           - pass:
               when: "== kurl"
               message: KURL is a supported distribution
