--- a/manifests/postgres-secret.yaml
+++ b/manifests/postgres-secret.yaml
@@ -4,6 +4,8 @@ metadata:
   name: sentry-postgresql
   labels:
     app: postgresql
+  annotations:
+    kots.io/when: '{{repl ConfigOptionEquals "postgres_type" "embedded_postgres"}}'
 type: Opaque
 data:
   postgres-password: '{{repl ConfigOption "embedded_postgres_password" | Base64Encode}}'
