Add sentry pods logs to Sentry Pro Demo app.

--- a/manifests/cron-deployment.yaml
+++ b/manifests/cron-deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: sentry-cron
+        component: sentry
     spec:
       containers:
       - name: sentry-cron
