--- a/manifests/postgres-deployment.yaml
+++ b/manifests/postgres-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         app: postgresql
+        component: sentry
     spec:
       containers:
       - name: sentry-postgresql
