--- a/manifests/redis-statefulset.yaml
+++ b/manifests/redis-statefulset.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         role: master
         app: redis
+        component: sentry
     spec:
       securityContext:
         fsGroup: 1001
