--- a/manifests/usercreate-job.yaml
+++ b/manifests/usercreate-job.yaml
@@ -10,6 +10,7 @@ spec:
       name: "sentry-user-create"
       labels:
         app: sentry
+        component: sentry
     spec:
       restartPolicy: Never
       containers:
