--- a/manifests/web-deployment.yaml
+++ b/manifests/web-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: sentry
         role: web
+        component: sentry
     spec:
       containers:
       - name: sentry-web
