--- a/manifests/web-deployment.yaml
+++ b/manifests/web-deployment.yaml
@@ -28,18 +28,18 @@ spec:
               name: sentry
               key: sentry-secret
         - name: SENTRY_DB_USER
-          value: '{{repl if ConfigOptionEquals "postgres_type" "postgres_type_embedded"}}sentry{{repl else}}{{repl ConfigOption "external_postgres_user" }}{{repl end}}'
+          value: '{{repl if ConfigOptionEquals "postgres_type" "embedded_postgres"}}sentry{{repl else}}{{repl ConfigOption "external_postgres_user" }}{{repl end}}'
         - name: SENTRY_DB_NAME
-          value: '{{repl if ConfigOptionEquals "postgres_type" "postgres_type_embedded"}}sentry{{repl else}}{{repl ConfigOption "external_postgres_db" }}{{repl end}}'
+          value: '{{repl if ConfigOptionEquals "postgres_type" "embedded_postgres"}}sentry{{repl else}}{{repl ConfigOption "external_postgres_db" }}{{repl end}}'
         - name: SENTRY_DB_PASSWORD
           valueFrom:
             secretKeyRef:
               name: sentry-postgresql
               key: postgres-password
         - name: SENTRY_POSTGRES_HOST
-          value: '{{repl if ConfigOptionEquals "postgres_type" "postgres_type_embedded"}}sentry-postgres{{repl else}}{{repl ConfigOption "external_postgres_host"}}{{repl end}}'
+          value: '{{repl if ConfigOptionEquals "postgres_type" "embedded_postgres"}}sentry-postgresql{{repl else}}{{repl ConfigOption "external_postgres_host"}}{{repl end}}'
         - name: SENTRY_POSTGRES_PORT
-          value: '{{repl if ConfigOptionEquals "postgres_type" "postgres_type_embedded"}}5432{{repl else}}{{repl ConfigOption "external_postgres_port" }}{{repl end}}'
+          value: '{{repl if ConfigOptionEquals "postgres_type" "embedded_postgres"}}5432{{repl else}}{{repl ConfigOption "external_postgres_port" }}{{repl end}}'
         - name: SENTRY_REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
