Fix Sentry Demo

--- a/manifests/config.yaml
+++ b/manifests/config.yaml
@@ -21,6 +21,10 @@ spec:
           type: password
           hidden: true
           value: "{{repl RandomString 40}}"
+        - name: worker_replicas
+          title: Worker Replicas
+          type: text
+          required: true
     - name: database
       title: Database
       description: Database Options
