--- a/manifests/postgres-deployment.yaml
+++ b/manifests/postgres-deployment.yaml
@@ -83,5 +83,4 @@ spec:
         persistentVolumeClaim:
           claimName: sentry-postgresql
       - name: postgres-backup
-        persistentVolumeClaim:
-          claimName: sentry-backup
+        emptyDir:{}
